<?xml version="1.0"?>
<package format="2">
  <name>occlusion_mapping</name>
  <version>0.0.0</version>
  <description>Creates a occlusion map</description>
  <maintainer email="ddamm@fu-berlin.de">FU Berlin</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <author email="ddamm@fu-berlin.de">David Damm</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>autonomos_atlas_lib</build_depend>
  <build_depend>autonomos_common_types</build_depend>
  <depend>roscpp</depend>
  <depend>nav_msgs</depend>

  <depend>autonomos_atlas_arnd</depend>

  <depend>tf</depend>
  <depend>nodelet</depend>

  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>occlusion_mapping_msgs</depend>
  <exec_depend>libpcl-all</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
  	<nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
